# Polymarket_wallet_research

./: .env.example  .gitignore  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt  wallets.txt
clients/: __init__.py  clob_client.py  gamma_client.py  polymarket_analytics_client.py  profile_client.py
config/: __init__.py  api_contracts.py  logging_config.py  settings.py
configs/: forward_paper_30d_core4.json  forward_paper_30d_core4_wallets.csv  forward_paper_30d_watchlist.csv  forward_paper_v1.json  forward_paper_v1_wallets.csv
data/: manual_seed_wallets.csv  manual_seed_wallets_no_lucky.csv  manual_seed_wallets_resolved.txt  manual_seed_wallets_unresolved.csv  wallet_features.csv  wallet_first_pass_labels.csv
db/: __init__.py  base.py  models.py  session.py
docs/: DATABASE_RELEASE.md  FORWARD_PAPER_30D_CORE4.md  GITHUB_PUBLISH.md
ingestion/: __init__.py  backfill.py  markets.py  prices.py  wallets.py
reports/: __init__.py  delay_plots.py  follow_strategy_report.py  multi_oos_plots.py  oos_plots.py  plots.py  summary_exports.py  wallet_labeling_summary.md  wallet_leaderboard.py
research/: __init__.py  active_watchlist.py  all_active_reevaluation.py  behavior_analysis.py  copy_follow_expiry.py  copy_follow_wallet_exit.py  costs.py  current_market_wallet_scan.py  delay_analysis.py  enrich_trades.py  event_study.py  forward_paper_dashboard.py  good_wallet_analysis.py  house_book_oos.py  house_open_price_refresh.py  house_portfolio_rules.py  manual_seed_analysis.py  manual_seed_consolidation.py  manual_seed_copy_backtest.py  oos_validation.py  (+13 more)
(+79 files in other folders)
